# rna4_contenido_educativo

./: README.md  pyproject.toml  requirements.txt
docs/: plan estudio.txt
notebooks/: Evaluación_automatica.ipynb
src/education_content_agent/: crew.py  crew2.py  crew3.py  crew4.py  crew5.py  discussion_questions_crew.py  extract_info.py  main.py  md2pdf.py  notes_objectives_crew.py  practice_problems_crew.py  quality_review_crew.py  resource_recommendation_crew.py  teaching_style_analysis_crew.py
src/education_content_agent/config/: agents.yaml  agents2.yaml  agents3.yaml  agents4.yaml  agents5.yaml  analyzer.yaml  curator.yaml  debater.yaml  discussion_questions_task.yaml  notes_objectives_task.yaml  practice_problems_task.yaml  problemsolver.yaml  quality_review_task.yaml  resource_recommendation_task.yaml  reviewer.yaml  scholar.yaml  tasks.yaml  tasks2.yaml  tasks3.yaml  tasks4.yaml  tasks5.yaml  teaching_style_analysis_task.yaml
src/education_content_agent/tools/: custom_tool.py
test/deepseekr18b/1/: class_notes.md  discussion_questions.md  learning_objectives.md  practice_problems.md  resource_recommendation.md
test/deepseekr18b/2/: class_notes.md  discussion_questions.md  final_report.md  learning_objectives.md  practice_problems.md  resource_recommendation.md
test/deepseekr18b/3/: class_notes.md  discussion_questions.md  final_report.md  learning_objectives.md  practice_problems.md  resource_recommendation.md
test/deepseekr18b/4/: class_notes.md  discussion_questions.md  learning_objectives.md  practice_problems.md  resource_recommendation.md  (+1 more)
(+149 files in other folders)
