[project]
name = "education_content_agent"
version = "0.1.0"
description = "education_content_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
education_content_agent = "education_content_agent.main:run"
run_crew = "education_content_agent.main:run"
train = "education_content_agent.main:train"
replay = "education_content_agent.main:replay"
test = "education_content_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
